# meetings-capture-hackathon

./: .dockerignore  .env.template  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  style-sheet.txt
.github/workflows/: isort.yml
app/: home.py
app/pages/: 2_Transcript.py  3_Summary.py  Summary.py  Transcript.py
config/: logging.py  settings.py
hackathon/: api.py
hackathon/constants/: constants.py
hackathon/llm/: chain_config.py  llm.py  llm_api.py  llm_chains.py  llm_handler.py
hackathon/llm/prompts/: core.py
hackathon/loader/: chunker.py  loader.py  processors.py
hackathon/streamlit/: utils.py
hackathon/transcripts/: transcript_handling.py
hackathon/vectorstore/: embeddings.py  opensearch.py  vectorstore.py  vestorstore_loader.py
notebooks/: api_test.ipynb  api_test_po.ipynb  inbox_manager.ipynb  instructor.ipynb  langchain.ipynb  reasearch_agent.ipynb
